# f1stats

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py
app/models/: f1.py
datastore/: readme.txt
